# djangorest

./: .env-example  .flake8  docker-compose.yml  noxfile.py  pyproject.toml
djangorest/: asgi.py  settings.py  urls.py  wsgi.py
product/: admin.py  choices.py  fields.py  forms.py  models.py  serilizers.py  urls.py  views.py
product/migrations/: 0001_initial.py
